projetos/desafio-final-dk8s/semana-4/k8s/network-policies/allow-alertmanager-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager-egress
  namespace: tipsbank-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      alertmanager: kube-prometheus-stack-alertmanager
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
