projetos/desafio-final-dk8s/semana-4/k8s/network-policies/allow-monitoring-locust-to-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-locust-egress-to-transacoes
  namespace: tipsbank-monitoring
spec:
  podSelector:
    matchLabels:
      app: locust
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-transacoes
          podSelector:
            matchLabels:
              app: api-transacoes
      ports:
        - port: 8080
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress-monitoring
  namespace: tipsbank-monitoring
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
