projetos/desafio-final-dk8s/semana-4/k8s/network-policies/allow-promethesu-tipsbank-contas.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-tipsbank-contas
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
      app: api-contas
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-monitoring
      ports:
        - protocol: TCP
          port: 8080
