projetos/desafio-final-dk8s/semana-4/k8s/network-policies/allow-prometheus-operator-egress-to-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-operator-egress-to-kube-api
  namespace: tipsbank-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
